--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
     "name": "Minecraft Server Status Bot",
     "description": "Discord Bot that checks status for a specified server and displays it in the Discord sidebar.",
+    "repository": "https://github.com/Fyssion/mc-status-bot/",
     "env": {
       "bot-token": {
         "description": "Your bot application's token"
