--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://fyssioncodes.com/mc-status-bot" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: just-the-docs
+# theme: just-the-docs
 remote_theme: pmarsceill/just-the-docs
 
 aux_links:
