--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: mc-status-bot
 email: fyssioncodes@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A simple Discord bot that displays the status of a Minecraft server in the sidebar. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://fyssioncodes.com/mc-status-bot" # the base hostname & protocol for your site, e.g. http://example.com
 
