--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/mc-status-bot" # the subpath of your site, e.g. /blog
 url: "https://www.fyssioncodes.com" # the base hostname & protocol for your site, e.g. http://example.com
 
+ga_tracking: G-JFKVM795DK
+
 defaults:
   - scope:
       path: "assets/img"
